@@ -4,6 +4,7 @@
 - The ':' character is no longer allowed in metric or label names. For metric names, Prometheus standard practice is to use colon only in recording rules.
 - Publish symbol packages and add Source Link support for easier debugging experience.
 - Fix defect where metrics with different labels could overwrite each other in specific circumstances with multiple metric factories in use (#389).
+- Ensure even harder that MetricPusher flushes the final state before stopping (#383 and #384)
 * 7.1.0
 - Added back .NET Standard 2.0 support as some customers had a hard dependency on .NET Standard 2.0 (despite not being a documented feature even earlier).
 - Added (Observable)UpDownCounter support to MeterAdapter (.NET 7 specific feature).
